# sword-skill

./: LICENSE  README.md  SKILL.md  pyproject.toml
references/: schema.md
src/sword_skill/cli/: app.py
src/sword_skill/skills/weather/: __init__.py
