[project]
name = "sword-skill"
version = "0.1.0"
description = "Sword Skill is skill sets for OpenClaw"
readme = "README.md"
authors = [{ name = "Kim, Jin Su" }]
requires-python = ">=3.14"
dependencies = ["cyclopts>=4.10.2", "httpx>=0.28.1", "orjson>=3.11.8"]

[dependency-groups]
dev = ["ruff>=0.15.11"]

[project.urls]
repository = "https://github.com/item4/sword-skill"

[project.scripts]
sws = "sword_skill.cli.app:root_app"

[tool.ruff]
line-length = 120
preview = true

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
